# EfolioGlobalRecurso_POO_Wine

./: CMakeLists.txt  README.md  suaves.txt
src/: adega.cpp  adega.h  main.cpp  vinho.cpp  vinho.h
